--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -78,7 +78,7 @@ if(WIN32)
 endif()
 
 if (USE_SYSTEM_BOOST)
-find_package(Boost 1.64 COMPONENTS filesystem locale thread program_options regex date_time)
+find_package(Boost 1.64 COMPONENTS context coroutine filesystem locale thread program_options regex date_time)
 
 else()
 set(Boost_USE_STATIC_LIBS ON)
