--- a/3rd-src/boost/CMakeLists.txt
+++ b/3rd-src/boost/CMakeLists.txt
@@ -72,9 +72,18 @@ if(WIN32)
 	set(EXEUCTABLEFORMAT "pe")
 	set(SYSABI "ms")
 
+	message("CMAKE_SYSTEM_PROCESSOR = " ${CMAKE_SYSTEM_PROCESSOR})
 
-	IF("${CMAKE_SYSTEM_PROCESSOR}" MATCHES "x86")
-		set(SYSABI "sysv")
+
+	IF("${CMAKE_SYSTEM_PROCESSOR}" MATCHES "AMD64")
+		set(SYSABI "ms")
+		if( CMAKE_SIZEOF_VOID_P EQUAL 8 )
+			set(ARCH "x86_64")
+		else()
+			set(ARCH "i386")
+		endif()
+	elseif("${CMAKE_SYSTEM_PROCESSOR}" MATCHES "x86")
+		set(SYSABI "ms")
 		if( CMAKE_SIZEOF_VOID_P EQUAL 8 )
 			set(ARCH "x86_64")
 		else()
