change exe name

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,15 +12,15 @@ add_definitions(-DBOOST_ASIO_NO_DEPRECATED)
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR})
 
-add_executable(smartsocks5 smartsocks5.cpp getifaddr.cpp)
+add_executable(smartproxy smartsocks5.cpp getifaddr.cpp)
 
-target_link_libraries(smartsocks5 Boost::thread Boost::program_options Boost::context)
+target_link_libraries(smartproxy Boost::thread Boost::program_options Boost::context)
 
 if (USE_SYSTEM_BOOST)
-target_link_libraries(smartsocks5 Boost::coroutine)
+target_link_libraries(smartproxy Boost::coroutine)
 endif()
 
-target_link_libraries(smartsocks5 utility)
+target_link_libraries(smartproxy utility)
 
 
-install(TARGETS smartsocks5 DESTINATION bin)
+install(TARGETS smartproxy DESTINATION bin)
