--- a/3rd-src/json11/CMakeLists.txt
+++ b/3rd-src/json11/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 2.8)
 
-add_library(json11 json11.cpp)
+add_library(json11 STATIC json11.cpp)
 target_include_directories(json11 PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
 if (MSVC)
