--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,7 +12,11 @@ add_definitions(-DBOOST_ASIO_NO_DEPRECATED)
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR})
 
-add_executable(smartproxy smartsocks5.cpp getifaddr.cpp)
+if (APPLE)
+	set(UI ui/statusbar.h ui/statusbar.mm)
+endif()
+
+add_executable(smartproxy smartsocks5.cpp getifaddr.cpp ${UI})
 
 target_link_libraries(smartproxy Boost::thread Boost::program_options Boost::context)
 
