--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -18,7 +18,7 @@ endif()
 
 add_executable(smartproxy MACOSX_BUNDLE smartsocks5.cpp getifaddr.cpp ${UI})
 
-set_target_properties(smartproxy PROPERTIES MACOSX_BUNDLE_INFO_PLIST MacOSXBundleInfo.plist.in)
+set_target_properties(smartproxy PROPERTIES MACOSX_BUNDLE_INFO_PLIST ${CMAKE_CURRENT_SOURCE_DIR}/MacOSXBundleInfo.plist.in)
 
 target_link_libraries(smartproxy Boost::thread Boost::program_options Boost::context)
 
