--- a/smartproxy.service.in
+++ b/smartproxy.service.in
@@ -5,6 +5,6 @@ DefaultDependencies=no
 [Service]
 ExecStart=@CMAKE_INSTALL_PREFIX@/bin/smartproxy
 LimitNOFILE=900000
-
+Restart=always
 [Install]
 WantedBy=multi-user.target
