--- a/package/PKGBUILD
+++ b/package/PKGBUILD
@@ -1,11 +1,11 @@
 pkgname=smartproxy
-pkgver=v0.8.6.r0.gda4754e
+pkgver=v0.8.8
 pkgrel=1
 arch=('x86_64')
 depends=('openssl' 'binutils')
 makedepends=('git' 'cmake' 'ninja')
 
-pkgver()
+pkgver3()
 {
     git describe --long --tags | sed 's/\([^-]*-g\)/r\1/;s/-/./g'
 }
