--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -14,13 +14,8 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR})
 
 add_executable(smartproxy smartsocks5.cpp getifaddr.cpp)
 
-target_link_libraries(smartproxy Boost::thread Boost::program_options Boost::context)
-
-if (USE_SYSTEM_BOOST)
-target_link_libraries(smartproxy Boost::coroutine)
-endif()
+target_link_libraries(smartproxy Boost::thread Boost::program_options Boost::context Boost::coroutine)
 
 target_link_libraries(smartproxy utility)
-
 
 install(TARGETS smartproxy DESTINATION bin)
